tests/ui/async-await/higher-ranked-auto-trait-5.no_assumptions.stderr
error: implementation of `Send` is not general enough
  --> $DIR/higher-ranked-auto-trait-5.rs:13:5
   |
LL | /     assert_send(async {
LL | |         call_me.call().await;
LL | |     });
   | |______^ implementation of `Send` is not general enough
   |
   = note: `Send` would have to be implemented for the type `&Wrap<CallMeImpl<&str>>`
   = note: ...but `Send` is actually implemented for the type `&'0 Wrap<CallMeImpl<&str>>`, for some specific lifetime `'0`

error: aborting due to 1 previous error

